# cpptext

./: .gitignore  CMakeLists.txt  README.md  awk_comparison.sh  runtime_comparison.sh
performance_tests/: python_comparison.py
runtime_output/: lowercase.txt  new.txt  remove_my_digits.txt  remove_my_whiteness.txt  remove_punctuation.txt  remove_regex.txt
runtime_testcases/: lowercase.txt  remove_digits.txt  remove_punctuation.txt  remove_regex.txt  remove_whitelines.txt
src/: .main.cpp.swp  CMakeLists.txt  build.sh  clean.sh  distclean.sh  generate_makefile.sh  main.cpp  normalizer.cpp  normalizer.h  processor.cpp  processor.h  run.sh  run_tests.sh  test_main.cpp  unit_test.h
